
syntax = "proto3";
package catalog;
option go_package = "/catalog";
import "google/protobuf/empty.proto";

message Service {
  int64 id = 1;
  int64 provider_id = 2;
  int64 service_type_id = 3;
  string name = 4;
  string description = 5;
  int64 default_duration = 6;
  float price = 7;
}

message GetCatalogRequest {
  int64 provider_id = 1;
}

message GetCatalogResponse {
  repeated Service services = 1;
}

message AddServiceRequest {
  int64 service_type_id = 1;
  string name = 2;
  string description = 3;
  int64 default_duration = 4;
  float price = 5;
}

message EditServiceRequest {
  int64 service_id = 1;
  int64 service_type_id = 2;
  string name = 3;
  string description = 4;
  int64 default_duration = 5;
  float price = 6;
}

message ClientPrice {
    int64 client_id = 1;
    int64 service_id = 2; 
    float price = 3;
}

message SetClientPriceRequest {
    int64 client_id = 1;
    int64 service_id = 2;
    float price = 3;
}

message GetClientPriceRequest {
    int64 client_id = 1;
    int64 service_id = 2;
}

message GetAppointmentChargeRequest {
    int64 appointment_id = 1;
    int64 end_datetime = 2;
}

message AppointmentCharge {
    int64 appointment_id = 1;
    float appointment_charge = 2;
}
message DeleteServiceRequest {
  int64 service_id = 1;
}

service Catalog {
    rpc GetCatalog(GetCatalogRequest) returns (GetCatalogResponse);
    rpc AddService(AddServiceRequest) returns (Service);
    rpc EditService(EditServiceRequest) returns (Service);
    rpc DeleteService(DeleteServiceRequest) returns (google.protobuf.Empty);
    rpc SetClientPrice(SetClientPriceRequest) returns (ClientPrice);
    rpc GetClientPrice(GetClientPriceRequest) returns (ClientPrice);
    rpc GetAppointmentCharge(GetAppointmentChargeRequest) returns (AppointmentCharge);
}

// usage:
//   rules: # IMPORTANT: ONLY LAST MATCHING RULE IS APPLIED
//   # Disable API key validation on just the ListShelves method
//   # while requiring an API key for the rest of the API.
//   - selector: "*"
//     allow_unregistered_calls: false
//   - selector: "endpoints.catalog.Catalog.GetCatalog"
//     allow_unregistered_calls: true
